Fixed bug #43175 (__destruct() throwing an exception with __call() causes segfault)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@245759 c90b9560-bf6c-de11-be94-00142212c4b1